src/tests/test-src/errors/E75-mod-space.syntran
// E75: mod-space
// A module name contains a space

use foo bar;
